feature: almost finished the ticket and started payments