@@ -1,12 +1,15 @@
 package com.booking.booking.services;
 
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import org.apache.tomcat.util.descriptor.web.ContextHandler;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -26,25 +29,36 @@ import jakarta.annotation.Nonnull;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.Setter;
+
+import static java.io.File.separator;
+
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.File;
+import java.io.InputStream;
+import java.io.OutputStream;
 
 @Getter
 @Setter
-@AllArgsConstructor
 @Service
 public class EventService {
     @Value("${application.file.uploads.photos-output-path}")
     private String fileUploadPath;
 
-    EventRepository eventRepository;
+    private final EventRepository eventRepository;
+
+    public EventService(EventRepository eventRepository) {
+        this.eventRepository = eventRepository;
+    }
 
     public Map<String, Object> getAllEvents(int page, int size) {
         Map<String, Object> mapEvent = new HashMap<>();
         Map<String, Object> mapPagination = new HashMap<>();
-        User user = (User)SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
-        Page<Event> events = eventRepository.findAll(pageable, user.getId());
-        List<singleEventDto> eventList = events.stream().map((event) -> new singleEventDto(event)).toList();
+        Page<Event> events = eventRepository.findAll(pageable);
+        List<Event> eventList = events.stream().toList();
         mapPagination.put("currentPage", events.getNumber());
         mapPagination.put("pageSize", events.getSize());
         mapPagination.put("totalElements", events.getTotalElements());
@@ -67,62 +81,80 @@ public class EventService {
         return mapEvent;
     }
 
-    public void postSingleEvent(PostEventDto postEventDto) {
-        if (!postEventDto.getIsCancelled())
-            throw new EntityNotFoundException("isCanceled value is invalid" + postEventDto.getIsCancelled());
+    public Map<String, Object> postSingleEvent(PostEventDto postEventDto) {
+        User user = (User)SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         if (!postEventDto.getEventDateTime().isAfter(LocalDateTime.now()))
             throw new EntityNotFoundException("eventDateTime value is invalid" + postEventDto.getEventDateTime());
-        String imagePath = (postEventDto.getImage() != null && !postEventDto.getImage().isEmpty()) ? saveImage(postEventDto.getImage()) : getDefaultImagePath();
-        Event event = new Event(null, null, null, null, null, null, null, null, null, null, null, null, null);
+        String imagePath = (postEventDto.getImage() != null && !postEventDto.getImage().isEmpty()) ? saveImage(postEventDto.getImage(), user) : getDefaultImagePath();
+        Event event = Event
+                        .builder()
+                        .name(postEventDto.getName())
+                        .description(postEventDto.getDescription())
+                        .location(postEventDto.getLocation())
+                        .category(postEventDto.getCategory())
+                        .eventDateTime(postEventDto.getEventDateTime())
+                        .price(postEventDto.getPrice())
+                        .totalTickets(postEventDto.getTotalTickets())
+                        .availableTickets(postEventDto.getTotalTickets())
+                        .user(user)
+                        .imageUrl(imagePath)
+                        .build();
+        event = eventRepository.save(event);
+        Map<String, Object> mapEvent = new HashMap<>();
+        mapEvent.put("status", "success");
+        mapEvent.put("message", "Event created successfully.");
+        mapEvent.put("data", event);
+        return mapEvent;
     }
         
-    private String saveImage(MultipartFile image) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'saveImage'");
-    }
-
-    private String getDefaultImagePath() {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getDefaultImagePath'");
-    }
-
-     public String saveFile(@Nonnull MultipartFile sourceFile, @Nonnull String userId) {
-        final String fileUploadSubPath = "users" + separator + userId;
-        return uploadFile(sourceFile, fileUploadSubPath);
-    }
-
-    private String uploadFile(@Nonnull MultipartFile sourceFile, @Nonnull String fileUploadSubPath) {
-        final String finalUploadPath = fileUploadPath + separator + fileUploadSubPath;
-        File targetFolder = new File(finalUploadPath);
-
+    private String saveImage(MultipartFile image, User user) {
+        final String subPath = "users" + separator + user.getId();
+        final String fullPath = fileUploadPath + separator + subPath;
+        File targetFolder = new File(fullPath);
         if (!targetFolder.exists()) {
-            boolean folderCreated = targetFolder.mkdirs();
-            if (!folderCreated) {
-                log.warn("Failed to create the target folder: " + targetFolder);
+            if (targetFolder.mkdirs()) {
+                System.out.println("Failed to create the image's containing Folder " + fullPath);
                 return null;
             }
         }
-        final String fileExtension = getFileExtension(sourceFile.getOriginalFilename());
-        String targetFilePath = finalUploadPath + separator + currentTimeMillis() + "." + fileExtension;
-        Path targetPath = Paths.get(targetFilePath);
-        try {
-            Files.write(targetPath, sourceFile.getBytes());
-            log.info("File saved to: " + targetFilePath);
+        String fileName = image.getOriginalFilename();
+        String targetFilePath = targetFolder + separator + System.currentTimeMillis() + ".";
+        if (fileName != null && !fileName.isEmpty() && fileName.lastIndexOf(".") != -1)
+            targetFilePath += fileName.substring(fileName.lastIndexOf(".")).toLowerCase();
+        try (InputStream inputStream = new BufferedInputStream(image.getInputStream());
+            OutputStream outputStream = new BufferedOutputStream(Files.newOutputStream(Path.of(targetFilePath)))) {
+            byte buffer[] = new byte[8192];
+            int bytesRead;
+            while ((bytesRead = inputStream.read(buffer)) != -1) {
+                outputStream.write(buffer, 0, bytesRead);
+            }
             return targetFilePath;
-        } catch (IOException e) {
-            log.error("File was not saved", e);
-        }
+        } catch (Exception e) {
+            System.out.println("Failed to write the image to the destination " + targetFilePath);        }
         return null;
     }
 
-    private String getFileExtension(String fileName) {
-        if (fileName == null || fileName.isEmpty()) {
-            return "";
-        }
-        int lastDotIndex = fileName.lastIndexOf(".");
-        if (lastDotIndex == -1) {
-            return "";
-        }
-        return fileName.substring(lastDotIndex + 1).toLowerCase();
+    private String getDefaultImagePath() {
+        String filePath = fileUploadPath + separator + "default.jpg";
+        return filePath;
+    }
+
+    public Map<String, Object> searchEvents(int page, int size, String searchTerm) {
+        Map<String, Object> mapEvent = new HashMap<>();
+        Map<String, Object> mapPagination = new HashMap<>();
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        Page<Event> events = eventRepository.findByNameContainingIgnoreCaseOrDescriptionContainingIgnoreCaseOrLocationContainingIgnoreCase(pageable, searchTerm, searchTerm, searchTerm);
+        List<Event> eventList = events.stream().toList();
+        mapPagination.put("currentPage", events.getNumber());
+        mapPagination.put("pageSize", events.getSize());
+        mapPagination.put("totalElements", events.getTotalElements());
+        mapPagination.put("totalPages", events.getTotalPages());
+        mapPagination.put("firstPage", events.isFirst());
+        mapPagination.put("lastPage", events.isLast());
+        mapEvent.put("status", "success");
+        mapEvent.put("message", "Data retrieved successfully.");
+        mapEvent.put("data", eventList);
+        mapEvent.put("pagination", mapPagination);
+        return mapEvent;
     }
 }
